# call-shield

./: .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  PROOF_OF_ARTIFACTS.md  README.md  TIMELINE_OF_INVENTION.md  USER_STORY_ANALYSIS.md  WHITEPAPER.md  build.rs  patterns.csv
android/: settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/cochranblock/callshield/: IntentClassifier.java  ShieldActivity.java  ShieldScreeningService.java
android/app/src/main/res/layout/: activity_shield.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
docs/: compression_map.md
govdocs/: ACCESSIBILITY.md  CMMC.md  FEDERAL_USE_CASES.md  FIPS.md  FedRAMP_NOTES.md  ITAR_EAR.md  PRIVACY.md  SBOM.md  SECURITY.md  SSDF.md  SUPPLY_CHAIN.md  SUPPLY_CHAIN_AUDIT.md
ios/: Cargo.toml  build-ipa.sh  build.rs
ios/CallShield/: AppDelegate.swift  Info.plist
ios/src/: lib.rs
scripts/: build-all-targets.sh  sync-patterns.sh
src/: main.rs
web/: index.html  manifest.json  sw.js
